# pygeomatic

./: .gitignore  CLAUDE.md  LICENSE  README.md  action.yml  pyproject.toml  registry.json
.github/workflows/: ci.yml  publish-articles.yml  release.yml
docs/: pygeomatic-handbook.md  tex-highlight-ergonomics.md  tex-reveal.md
examples/articles/: vector-scaling.md
scripts/: build_to_dsl.py  compile_article.py  compile_articles.py  copy_from_tinyvolt.sh
src/pygeomatic/: __init__.py  article.py  coercions.json  coercions.py  emit.py  extensions.py  generate.py  inference.py  macros.json  macros.py  nodes.py  palette.py  parse.py  prompting.py  registry.py  runner.py  store.py  system_nodes.py  tex.py
src/pygeomatic/functions/: helpers.py
src/pygeomatic/functions/implementations/: __init__.py  annotation_functions.py  array.py  autograd_functions.py  basic_figures.py  boolean_functions.py  complex_functions.py  curve_functions.py  intersections.py  ode_functions.py  planar_geometry.py  polygons.py  property_functions.py  rotation_functions.py  scalar_functions.py  special_functions.py  tangent_functions.py  tensor_functions.py  translation_functions.py
src/pygeomatic/functions/overloads/: __init__.py  abs.py  add.py  create_overload.py  div.py  exp.py  log.py  mul.py  neg.py  pow.py  sqrt.py  sub.py
tests/: test_arg_types.py  test_article.py  test_auto_create.py  test_emit.py  test_extensions.py  test_functions.py  test_generate.py  test_macros.py  test_name_inference.py  test_parity.py  test_parse.py  test_pythonic_syntax.py  test_system_nodes.py  test_tex.py
