[project]
name = "pygeomatic"
version = "0.1.0"
description = "Python mirror of the geomatic DSL function library; records calls for deterministic DSL emission"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pydantic>=2.7",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pygeomatic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
