[project]
name = "pygeomatic"
version = "0.2.1"
description = "Python mirror of the geomatic DSL function library; records calls for deterministic DSL emission"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pydantic>=2.7",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]

[project.urls]
Homepage = "https://github.com/TinyVolt/pygeomatic"
Repository = "https://github.com/TinyVolt/pygeomatic"
Issues = "https://github.com/TinyVolt/pygeomatic/issues"

[dependency-groups]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pygeomatic"]

[tool.hatch.build.targets.sdist]
only-include = ["src", "README.md", "LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
